--- a/src/app/user-pages/Home.css
+++ b/src/app/user-pages/Home.css
@@ -1,22 +1,42 @@
 .mainboard{
-    height: 100%;
-    overflow-y: scroll;
+    
+    
+    overflow-y: auto;    
 }
 
 .bg{
-    height: 100%; 
+    height: 100vh;     
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("../../assets/images/carousel/banner_9.jpg");
+    background-image: url("../../assets/images/loginsystem/deneme1.png");
 }
 
 .bg_logo{
     justify-content: start;
     height: 20%; 
-    margin: 20px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-   
+    margin: 20px;   
+}
+
+
+.login_btn{    
+    
+    justify-content: end;
+    height: 30px; 
+    width: 170px;   
+    margin: 35px;
+    padding: 5px;
+}
+
+.login-btn{
+    justify-content: end;
+    
+}
+
+.makejob{
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    display: flex;
+    
 }
